# erniebot-rs-chat

./: .gitignore  README.md
backend/: Cargo.toml
backend/configs/: summary_config.json
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240416_000001_create_message_table.rs  m20240416_000002_create_session_table.rs  m20240416_000003_create_user_table.rs
backend/src/: agent.rs  data.rs  main.rs  parser.rs
backend/src/entities/: message.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  session.rs  user.rs
backend/src/functions/: calculator.rs  direct_reply.rs  document_summary.rs  function.rs  mod.rs
backend/templates/: postprocess.template  select.template  summary.template
frontend/: package.json  plugin.ts  pnpm-lock.yaml
frontend/src/: app.ts
frontend/src/components/Chat/: Chat.tsx  index.ts
frontend/src/pages/Home/: index.tsx
