[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

erniebot-rs = "0.4.1"
serde_json = "1.0.115"
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }
axum = {version="0.7.5", features=["multipart"]}
socketioxide = "0.12.0"
axum-macros = "0.4.1"
lopdf = "0.32.0"
url = "2.5.0"
tower= "0.4.13"
tower-http = {version = "0.5.2", features= ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
schemars = "0.8"
serde = {version = "1.0.197", features = ["derive"]}
regex = "1"
evalexpr = "11"
sea-orm = { version = "0.12", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
chrono = "0.4.38"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
